# LoseWeightEasily

./: .gitignore  .gitmodules  APP_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PROJECT_CRITIQUE.md  README.md  check_milvus_data.py  config.yaml.example  docker-compose.yml  food_data.db  food_index.faiss  food_metadata.pkl  main.py  pyproject.toml  run_backend.bat  run_frp.bat  run_with_frp.bat  streaming_markdown_for_flutter.md  test_query.py  test_simple.py  test_vector_search.py  使用说明.md
.github/: copilot-instructions.md
backend/: .dockerignore  API_DOC.md  Dockerfile  README.md  check_data.py  config.yaml.example  fix_db.py  pyproject.toml  test_full_flow.py  test_register.py
backend/ChmlFrp-0.51.2_251023_windows_amd64/: frpc.ini
backend/data/: food_metadata.json
backend/scripts/: import_usda_to_milvus.py  test_food_search.py  test_upload.py
backend/src/: app.py  import_food_data.py  models.py
backend/src/api/: bmr.py  chat.py  food.py  food_analysis.py  food_log.py  meal_plan.py  user.py  weight.py
backend/src/core/: config.py  database.py  logging.py  minio_client.py  security.py
backend/src/prompts/: food_analyzer.j2  guidance.j2  meal_planner.j2
backend/src/repositories/: chat_repository.py  food_log_repository.py  food_recognition_repository.py  food_repository.py  user_repository.py  weight_repository.py
backend/src/schemas/: bmr.py  food.py  food_analysis.py  food_log.py  meal_plan.py  user.py  weight.py
backend/src/services/: bmr_service.py  food_analysis_service.py  food_service.py  meal_planner_service.py  user_service.py  weight_service.py
backend/tests/: conftest.py  test_user_api.py  test_weight_api.py
docs/: api.md  data_fix_report.md  faiss_search.md  faiss_search_legacy.md  meal_planning_example.md  usage.md
mobile_app/: README.md  pubspec.yaml
mobile_app/android/: settings.gradle.kts
mobile_app/android/app/: build.gradle.kts
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/android/app/src/main/kotlin/com/lossweight/mobile_app/: MainActivity.kt
mobile_app/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
mobile_app/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
mobile_app/lib/: main.dart
mobile_app/lib/models/: food.dart  food_log.dart  message_segment.dart  user.dart  weight_record.dart
mobile_app/lib/providers/: auth_provider.dart  chat_provider.dart  food_log_provider.dart  meal_plan_provider.dart  navigation_provider.dart  search_provider.dart  theme_provider.dart  user_provider.dart  weight_provider.dart
mobile_app/lib/screens/: auth_screen.dart  bmr_screen.dart  dashboard_screen.dart  login_screen.dart  main_screen.dart  meal_plan_screen.dart  onboarding_screen.dart  search_screen.dart  user_screen.dart  weight_screen.dart  xiao_song_screen.dart
mobile_app/lib/services/: api_service.dart
mobile_app/lib/utils/: app_colors.dart  ark_component_builder.dart  ark_protocol_syntax.dart  bmr_calculator.dart  markdown_util.dart  protocol_parser.dart  streaming_markdown_parser.dart  theme.dart
mobile_app/lib/utils/streaming_renderer/: ast.dart  lexer.dart  parser.dart
mobile_app/lib/widgets/: glass_card.dart  protocol_component.dart  streaming_markdown.dart
mobile_app/lib/widgets/streaming_renderer/: render_island.dart
mobile_app/test/: widget_test.dart
src/loss_weight/: __init__.py  bmr.py  cli.py  config.py  container.py  database.py  logging_config.py  meal_planner.py  models.py  query.py  search.py  weight_tracker.py
src/loss_weight/ui/: __init__.py  main_window.py  styles.py
src/loss_weight/ui/pages/: __init__.py  base.py  bmr.py  dashboard.py  food_search.py  meal_plan.py  settings.py  weight.py
tests/: __init__.py  conftest.py  test_bmr.py  test_config.py  test_container.py  test_database.py  test_e2e.py  test_logging.py  test_mock.py  test_models.py  test_search.py  test_weight_tracker.py
