[project]
name = "loss-weight-easily"
version = "0.2.0"
description = "ðŸŽ é£Ÿç‰©å¡è·¯é‡ŒæŸ¥è¯¢ç³»ç»Ÿ - åŸºäºŽ FAISS å‘é‡è¯­ä¹‰æœç´¢çš„æ™ºèƒ½è¥å…»æŸ¥è¯¢å·¥å…·"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ZDP-Q" }
]
keywords = [
    "food",
    "calories",
    "nutrition",
    "faiss",
    "semantic-search",
    "chinese",
    "multilingual"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
]

dependencies = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
loss-weight = "loss_weight.cli:main"

[project.urls]
Homepage = "https://github.com/ZDP-Q/LossWeightEasily"
Repository = "https://github.com/ZDP-Q/LossWeightEasily"
Issues = "https://github.com/ZDP-Q/LossWeightEasily/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loss_weight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["loss_weight"]
