[project]
name = "loss-weight-easily"
version = "0.2.0"
description = "ðŸŽ è½»æ¾å‡é‡åŠ©æ‰‹ - æ™ºèƒ½å¥åº·ç®¡ç†å·¥å…·ï¼Œæä¾›é£Ÿç‰©æŸ¥è¯¢ã€ä½“é‡è®°å½•ã€ä»£è°¢è®¡ç®—å’Œé£Ÿè°±è§„åˆ’"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ZDP-Q" }
]
keywords = [
    "food",
    "calories",
    "nutrition",
    "faiss",
    "semantic-search",
    "chinese",
    "multilingual"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
]

dependencies = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "PySide6>=6.6.0",
    "PyYAML>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
loss-weight = "loss_weight.cli:main"
loss-weight-ui = "loss_weight.ui:main"

[project.urls]
Homepage = "https://github.com/ZDP-Q/LossWeightEasily"
Repository = "https://github.com/ZDP-Q/LossWeightEasily"
Issues = "https://github.com/ZDP-Q/LossWeightEasily/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loss_weight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    # å¿½ç•¥ FAISS çš„ SwigPy å¼ƒç”¨è­¦å‘Šï¼ˆç¬¬ä¸‰æ–¹åº“é—®é¢˜ï¼‰
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    # å¿½ç•¥ pydantic å†…éƒ¨ä½¿ç”¨çš„å¼ƒç”¨è­¦å‘Š
    "ignore:.*pkg_resources.*:DeprecationWarning",
    # å¿½ç•¥ numpy ç›¸å…³è­¦å‘Š
    "ignore:.*np.float.*:DeprecationWarning",
]
markers = [
    "unit: å•å…ƒæµ‹è¯• - æµ‹è¯•å•ä¸ªå‡½æ•°æˆ–ç±»",
    "integration: é›†æˆæµ‹è¯• - æµ‹è¯•å¤šä¸ªç»„ä»¶åä½œ",
    "e2e: ç«¯åˆ°ç«¯æµ‹è¯• - æµ‹è¯•å®Œæ•´å·¥ä½œæµç¨‹",
    "slow: æ…¢é€Ÿæµ‹è¯• - è¿è¡Œæ—¶é—´è¾ƒé•¿çš„æµ‹è¯•",
    "requires_db: éœ€è¦çœŸå®žæ•°æ®åº“ - éœ€è¦å·²åˆå§‹åŒ–çš„æ•°æ®åº“",
    "requires_model: éœ€è¦åµŒå…¥æ¨¡åž‹ - éœ€è¦ä¸‹è½½çš„æ¨¡åž‹æ–‡ä»¶",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["loss_weight"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
